--- a/action.yml
+++ b/action.yml
@@ -18,7 +18,7 @@ runs:
       run: echo "composite step 1 - I am a greeting composite action"
       shell: bash
     - name: step 2
-      run: echo "composite step 2 - Hello $person_to_greet"
+      run: printenv
       shell: bash
     - name: step 3 set output
       run: echo "::set-output name={greet_result}::{true}"
