--- a/action.yml
+++ b/action.yml
@@ -23,3 +23,16 @@ runs:
     - name: step 3 set output
       run: echo "::set-output name={greet_result}::{true}"
       shell: bash
+    - name: Dump GitHub context
+        id: github_context_step
+        run: echo '${{ toJSON(github) }}'
+    - name: Dump job context
+      run: echo '${{ toJSON(job) }}'
+    - name: Dump steps context
+      run: echo '${{ toJSON(steps) }}'
+    - name: Dump runner context
+      run: echo '${{ toJSON(runner) }}'
+    - name: Dump strategy context
+      run: echo '${{ toJSON(strategy) }}'
+    - name: Dump matrix context
+      run: echo '${{ toJSON(matrix) }}' 
