--- a/action.yml
+++ b/action.yml
@@ -26,13 +26,19 @@ runs:
     - name: Dump GitHub context
       id: github_context_step
       run: echo '${{ toJSON(github) }}'
+      shell: bash
     - name: Dump job context
       run: echo '${{ toJSON(job) }}'
+      shell: bash
     - name: Dump steps context
       run: echo '${{ toJSON(steps) }}'
+      shell: bash
     - name: Dump runner context
       run: echo '${{ toJSON(runner) }}'
+      shell: bash
     - name: Dump strategy context
       run: echo '${{ toJSON(strategy) }}'
+      shell: bash
     - name: Dump matrix context
-      run: echo '${{ toJSON(matrix) }}' 
+      run: echo '${{ toJSON(matrix) }}'
+      shell: bash
